--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Icrop_project"
         tools:targetApi="31">
+        <activity android:name=".MainActivity"
+            android:exported="false"/>
+        <activity android:name=".SplashScreen2"
+            android:exported="false"/>
+        <activity android:name=".Login"
+            android:exported="false"/>
+        <activity android:name=".Registration"
+            android:exported="false"/>
+        <activity android:name=".Dashboard"
+            android:exported="false"/>
+
         <activity
-            android:name=".MainActivity"
+            android:name=".SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
