--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,16 @@
         android:theme="@style/Theme.Icrop_project"
         tools:targetApi="31">
         <activity
-            android:name=".SplashScreen4"
+            android:name=".SliderPage_3"
             android:exported="false" />
         <activity
-            android:name=".SplashScreen3"
+            android:name=".SliderPage_2"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="false" />
         <activity
-            android:name=".SplashScreen2"
+            android:name=".SliderPage"
             android:exported="false" />
         <activity
             android:name=".Login"
