--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +14,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Icrop_project"
         tools:targetApi="31">
+        <activity
+            android:name=".IntroSliderMain"
+            android:exported="false" />
+        <activity
+            android:name=".AnimatedSplash"
+            android:exported="false" />
+        <activity
+            android:name=".IntroOne"
+            android:exported="false" />
+        <activity
+            android:name=".IntroTwo"
+            android:exported="false" />
+        <activity
+            android:name=".IntroThree"
+            android:exported="false" />
         <activity
             android:name=".SliderPage"
             android:exported="false" />
